# SolarServer

./: CMakeLists.txt  File.cpp  File.h  InverterDataExtractor.cpp  InverterDataExtractor.h  Logger.h  README.md  RequestParser.cpp  RequestParser.h  ServerInstance.cpp  ServerInstance.h  UIThread.cpp  UIThread.h  error.html  index.html  inverterComm.h  main.cpp
.github/workflows/: codeql-analysis.yml
DataStorage/: DataStorage.cpp  DataStorage.h
Logger/: Logger.cpp
Options/: ProgramOptions.h
UI/: UserInterface.cpp  UserInterface.h
inveterExtractor/: InverterDataExtractor.cpp  InverterDataExtractor.h
serverLogic/: RequestParser.cpp  RequestParser.h  Responder.cpp  Responder.h  Response.cpp  Response.h  ServerInstance.cpp  ServerInstance.h
serverLogic/RequestsAndResponses/: RequestParser.cpp  RequestParser.h  Response.cpp  Response.h  ResponseBufferBuilder.cpp  ResponseBufferBuilder.h  ResponseManager.cpp  ResponseManager.h
serverLogic/RequestsAndResponses/PageResponses/: FileBearingResponseBuilder.cpp  FileBearingResponseBuilder.h
serverLogic/RequestsAndResponses/QueryResponses/: QueryResponseBuilder.cpp  QueryResponseBuilder.h
serverLogic/RequestsAndResponses/QueryResponses/MainPage/: MainPageBuilder.cpp  MainPageBuilder.h
serverLogic/RequestsAndResponses/QueryResponses/MainPageChart/: MainPageChartDataBuilder.cpp  MainPageChartDataBuilder.h
tests/: RequestParserTests.cpp  RequestParserTests.h  functionalityTestLoadPage.py  tests.cpp  tests.h
website/: index.html
website/css/: style.css
website/js/: myChart.js  page.js
